--- a/index.html
+++ b/index.html
@@ -166,13 +166,15 @@
         <h1>We'd love to hear from you</h1>
         <p class="subtitle">Fill out the form below and we’ll get back to you as soon as we can.</p>
       </header>
+      
+<!-- Insert these code snippets into your external site page in the order shown. -->
+<!-- Insert these <script> tags directly above the embedded form. -->
+<script async="async" src="https://marketingorg2.my.site-com.8ehxsog1arlc1q3nd80d6oj.ac.crm.dev:6101/lp/assets/scripts/external-forms-host.min.js"></script>
+<script async="async" src="https://marketingorg2.my.site-com.8ehxsog1arlc1q3nd80d6oj.ac.crm.dev:6101/lp/assets/lightning_out_embed/prod/en-US/MC6L4X2GNNNRH57NKRKRVNQCNFRA.js" onload="window.sfdc_forms?sfdc_forms.init():window.sfdc_forms={loReady:!0}"></script>
+<!-- This tag contains the form. Add it to your page where you want the form to be located. -->
+<fragment-z4va8sw223jal02i0x9guitdkjapzcngx7bzxifg7r5 title="Marketing Form" id="container" data-recaptcha-site-key="" data-web-tracking="true" data-external-form="true"></fragment-z4va8sw223jal02i0x9guitdkjapzcngx7bzxifg7r5>
 
-      <div class="form-card">
-        <!-- Insert these <script> tags directly above the embedded form. -->
-        <script async="async" src="https://marketingorg2.my.site-com.8ehxsog1arlc1q3nd80d6oj.ac.crm.dev:6101/lp/assets/scripts/external-forms-host.min.js"></script>
-        <script async="async" src="https://marketingorg2.my.site-com.8ehxsog1arlc1q3nd80d6oj.ac.crm.dev:6101/lp/assets/lightning_out_embed/prod/en-US/MC6L4X2GNNNRH57NKRKRVNQCNFRA.js" onload="window.sfdc_forms?sfdc_forms.init():window.sfdc_forms={loReady:!0}"></script>
-        <fragment-z4va8sw223jal02i0x9guitdkjapzcngx7bzxifg7r5 title="Marketing Form" id="container" data-recaptcha-site-key="" data-web-tracking="true" data-external-form="true"></fragment-z4va8sw223jal02i0x9guitdkjapzcngx7bzxifg7r5>
-      </div>
+
 
       <footer>
         <p>By submitting, you agree to our <a href="#">privacy policy</a>.</p>
